--- a/pants.toml
+++ b/pants.toml
@@ -1,5 +1,6 @@
 [GLOBAL]
 pants_version = "2.20.1"
+# pythonpath = ["%(buildroot)s/"]
 backend_packages = [
     "pants.backend.python",
     "pants.backend.python.typecheck.mypy",
