stuck on append only cache issue

--- a/sample-project/BUILD
+++ b/sample-project/BUILD
@@ -2,7 +2,10 @@ python_requirements(
     name="reqs",
 )
 
+file(name="db", source="datapants.duckdb")
+
 dbt_project(
     name="root",
     required_adapters=["dbt-duckdb"],
+    dependencies=[":db"],
 )
