--- a/sample-project/dbt_project.yml
+++ b/sample-project/dbt_project.yml
@@ -4,7 +4,7 @@ name: "jaffle_shop"
 version: "3.0.0"
 require-dbt-version: ">=1.7.0"
 
-profile: default # Put your profile here
+profile: datapants
 
 model-paths: ["models"]
 analysis-paths: ["analyses"]
