--- a/sample-project/pants.toml
+++ b/sample-project/pants.toml
@@ -1,5 +1,5 @@
 [GLOBAL]
-pants_version = "2.22.0.dev3"
+pants_version = "2.21.0"
 pythonpath = ["%(buildroot)s/../"]
 backend_packages = [
     "pants.backend.python",
