some more test skeletons

--- a/datapants/dbt/target_types/BUILD
+++ b/datapants/dbt/target_types/BUILD
@@ -1,1 +1,13 @@
-python_sources(sources=["*.py"])  # required so it picks up `test.py`
+test_sources = [
+    "test_rules.py",
+    "test_third_party_package.py",
+]
+
+python_sources(
+    sources=["*.py", *(f"!{src}" for src in test_sources)]  # required so it picks up `test.py`
+)
+
+python_tests(
+    name="tests",
+    sources=test_sources,
+)
