--- a/pants.toml
+++ b/pants.toml
@@ -11,7 +11,7 @@ backend_packages = [
     # Comment out below until new version release
     # "pants.backend.experimental.sql"
 ]
-ignore.add = ["sample-project"]
+pants_ignore.add = ["sample-project"]
 
 [test]
 use_coverage = true
