--- a/pants.toml
+++ b/pants.toml
@@ -1,5 +1,5 @@
 [GLOBAL]
-pants_version = "2.21.0"
+pants_version = "2.23.0dev2"
 backend_packages = [
     "pants.backend.python",
     "pants.backend.python.typecheck.mypy",
